[package]
name = "render-pipeline-shaders"
version = "0.2.0"
edition = "2021"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }
bitflags = "2.2.1"
paste = "1.0.12"
render-pipeline-shaders-sys = { path = "render-pipeline-shaders-sys" }
libc = "0.2.142"
libloading = "0.8.0"
static_assertions = "1.1.0"

[features]
default = ["vulkan"]
d3d11 = ["render-pipeline-shaders-sys/d3d11"]
d3d12 = ["render-pipeline-shaders-sys/d3d12"]
vulkan = ["render-pipeline-shaders-sys/vulkan"]

