[package]
name = "rps"
version = "0.3.0"
edition = "2021"

[dependencies]
ash = "0.38.0+1.3.281"
bitflags = "2.5.0"
paste = "1.0.15"
rps-sys = { path = "rps-sys" }
libc = "0.2.155"
libloading = "0.8.3"
static_assertions = "1.1.0"

[features]
default = ["vulkan"]
d3d11 = ["render-pipeline-shaders-sys/d3d11"]
d3d12 = ["render-pipeline-shaders-sys/d3d12"]
vulkan = ["render-pipeline-shaders-sys/vulkan"]

