[package]
name = "render-pipeline-shaders-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", branch = "rwh-0.6" }

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"

[features]
d3d11 = []
d3d12 = []
vulkan = []

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
